﻿Revision history for Dist-Zilla-PluginBundle-Author-KENTNL

2.016007 2014-07-30T04:31:01Z

2.016006 2014-07-30T04:27:01Z
 [Bug Fixes]
 - dep_utils: Less aggressive caching because [ commitish , path ] being cached can lead to wrong results.
 - tests: don't fail on newer dzil

 [Dependencies::Stats]
 - Dependencies changed since 2.016005, see misc/*.deps* for details
 - configure: ↓1
 - develop: ↑19
 - runtime: ↑22
 - test: ↑1 -1 (recommends: -2)

2.016005 2014-07-27T06:49:27Z
 [00 Minor]
 - dep_utils: Cache misc lookup calls to git for speed.
 - dep_utils: Use new CPAN::Changes attach syntax
 - dep_utils: Use new group Dependencies::Details

 [Dependencies::Stats]
 - Dependencies changed since 2.016004, see misc/*.deps* for details
 - develop: ↑10
 - runtime: ↑11 (recommends: +4 ↑1)
 - test: +3 ↑2 (recommends: +1 ↑1)

2.016004 2014-07-16T12:05:55Z
 [00 Minor]
 - dep_utils: Factor out primary summary logic into its own dist.

 [Dependencies::Stats]
 - Dependencies changed since 2.016003, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1 (recommends: +1)

2.016003 2014-07-15T09:01:30Z
 [00 Minor]
 - dep_utils: avoid annoying deprecation warning about { chars

 [Dependencies::Stats]
 - Dependencies changed since 2.016002, see misc/*.deps* for details
 - develop: ↑2
 - runtime: ↑4

2.016002 2014-07-13T06:25:05Z
 [00 Minor]
 - dep_changes util adds preludes describing the files.

 [Dependencies::Stats]
 - Dependencies changed since 2.016001, see misc/*.deps* for details
 - configure: ↑1
 - develop: (suggests: ↑1)
 - runtime: ↑4
 - test: ↑2

2.016001 2014-06-21T08:22:53Z
 [00 Minor]
 - Rework dep_changes util to use CPAN::Meta::Prereqs::Diff
 - generated perlcritic generator uses misc/ now instead.
 - generated modules come with 5.008, utf8, AUTHORITY and bumpversion ready
 - generated dist.ini comes with bumpversions enabled
 - generated dist.ini comes with copylicense

 [Dependencies::Stats]
 - Dependencies changed since 2.016000, see misc/*.deps* for details