@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.016007
+ [Changed / runtime requires]
+ - Dist::Zilla::Plugin::MetaData::BuiltWith 1.000001 → 1.001000
 
 2.016006 2014-07-30T04:27:01Z
  [Changed / configure requires]
